# Lobby

./: .gitignore  NOTICE  README.md
core/: Cargo.toml  README.md  test_accounts.json
core/crate/adapter/: Cargo.toml
core/crate/adapter/src/: lib.rs  router.rs
core/crate/adapter/src/handle/: eth_chain_id.rs  eth_send_transaction.rs  mod.rs
core/crate/adapter/src/rpc/: errors.rs  mod.rs  request.rs  response.rs
core/crate/eip1193/: Cargo.toml
core/crate/eip1193/src/: lib.rs  protocol.rs
core/crate/kernel/: Cargo.toml
core/crate/kernel/src/: adapter.rs  lib.rs  traits.rs
core/crate/kernel/src/adapter/: traits.rs  types.rs
core/sink/: Cargo.toml
core/sink/src/: lib.rs
lobby/: Cargo.toml  README.md
lobby/auth/: Cargo.toml
lobby/crate/cortex/: Cargo.toml
lobby/crate/kernel/: Cargo.toml
lobby/crate/membrane/: Cargo.toml
lobby/crate/membrane/src/: lib.rs
lobby/crate/memory/: Cargo.toml
local/: Cargo.toml
local/crate/relay/: Cargo.toml
local/crate/seal/: Cargo.toml
