[package]
name = "adapter"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[dependencies]
axum = "0.8.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.49", features = ["macros"] }
alloy-primitives = { version = "1.5.2", features = ["serde"] }
kernel = { path = "../kernel" }
hex = "0.4.3"